[package]
name = "uelaur"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.0"
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
enable-ansi-support = "0.1.2"
edit-distance = "2.1.0"

[profile.release]
lto = true
codegen-units = 1
